--- a/src/components/Genres/Genres.module.css
+++ b/src/components/Genres/Genres.module.css
@@ -1,3 +1,8 @@
-.check {
-display: flex;
-}
+/*.check {*/
+/*    font-size: 16px;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    height: 500px;*/
+/*    width: 15%;*/
+/*    background-color: aliceblue;*/
+/*}*/
